backport: re PR c/35712 (decimal float literal constant zero loses significant trailing zeroes)

Backport from mainline:
	2008-04-03  Janis Johnson  <janis187@us.ibm.com>
gcc/
	PR c/35712
	* dfp.c (decimal_from_decnumber): Retain trailing zeroes for
	decimal-float literal constant zero.
testsuite/
	PR c/35712
	* gcc.dg/dfp/constants-zero.c: New test.

From-SVN: r140466